fixed height issue on small screen w/ overflowing results in background

--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,10 @@ h3 {
   text-align: center;
 }
 
+.details-active #results-container {
+  display: none;
+}
+
 #movies-container {
   display: flex;
   display: -webkit-flex;
